<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.loginlinearlayout.LoginActivity"
    android:padding="@dimen/lly_login_padding"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/txvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/txvSignIn_margin"
        android:text="@string/txvSignIn"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/txvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edtUser"
        android:text="@string/txvUser"
        android:textAppearance="@android:style/TextAppearance.Small" />

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="@dimen/edtUser"
        android:background="@drawable/shape_edittext"
        style="@style/LoginEditText"/>

    <!-- Hay que vincular el TextView con el EditText. No añade nada visual, simplemente los relaciona
    contextualmente de manera interna-->
    <TextView
        android:id="@+id/txvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edtPassword"
        android:text="@string/txvPassword"
        android:textAppearance="@android:style/TextAppearance.Small" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/shape_edittext"
        style="@style/LoginEditText"/>

    <LinearLayout
        android:id="@+id/llySignOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/lly_sign_options">

        <CheckBox
            android:id="@+id/chkRemember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/chkRemember"
            android:textColor="@android:color/white"
            app:buttonTint="@color/colorCheckedChk"/>

        <TextView
            android:id="@+id/txvSingUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/btnSignUp"
            android:textAppearance="@android:style/TextAppearance.Small" />

    </LinearLayout>

    <!-- El componente se redibuja mas de 4 veces debido a que aplicamos un margen y despues el estilo vuelve a aplicar
     otro, eso hace que se redibuje.-->
    <Button
        android:id="@+id/btnSignIn"
        style="@style/Widget.Button.Transparent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/btnSignIn"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btnSignIn" />

    <Button
        android:id="@+id/btnGoogleSign"
        style="@style/Widget.Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGoogle"
        android:drawableStart="@drawable/ic_google"
        android:text="@string/btnGoogleSign" />

    <Button
        android:id="@+id/btnFacebookSign"
        style="@style/Widget.Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFacebook"
        android:drawableStart="@drawable/ic_facebook"
        android:text="@string/btnFacebookSign"/>

</LinearLayout>
